--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col-md-6 position-relative">
                 <!-- Background Image -->
                
-                <img src="C:\Users\Student\login\picture.jfif"
+                <img src="picture.jfif"
                     class="img-fluid" alt="Sample image"
                     style="width: 1344px; height: 1000px; flex-shrink: 0; opacity: 0.9;
                     background: linear-gradient(180deg, rgba(98, 98, 98, 0.79) 0%, rgba(0, 0, 0, 0.00) 0.01%, rgba(0, 0, 0, 0.30) 96.87%), url(<path-to-image>), lightgray 50% / cover no-repeat;
