--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     
 </head>
@@ -18,22 +18,22 @@
                
                 <img src="picture.jfif"
                     class="img-fluid" alt="Sample image"
-                    style="width: 1344px; height: 1000px; flex-shrink: 0; opacity: 0.9;
+                    style="width: 100%; height: 100%; flex-shrink: 0; opacity: 0.9;
                     background: linear-gradient(180deg, rgba(98, 98, 98, 0.79) 0%, rgba(0, 0, 0, 0.00) 0.01%, rgba(0, 0, 0, 0.30) 96.87%), url(<path-to-image>), lightgray 50% / cover no-repeat;
                     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);"
                 >   
                 <!-- Social Media Buttons Container -->
                 <div class="d-flex flex-column justify-content-center align-items-center position-absolute top-0 bottom-0 start-0 end-0">
                     <button class="btn btn-primary mb-3 "
-                    style="border-radius: 15px; padding-left: 5.5rem; padding-right: 5.5rem;">
+                    style="border-radius: 15px; padding-left: 2rem; padding-right: 2rem;">
                         <i class="fab fa-facebook"></i> Facebook
                     </button>
                     <button class="btn btn-info mb-3" 
-                    style="border-radius: 15px; padding-left: 5.5rem; padding-right: 5.5rem;">>
+                    style="border-radius: 15px; padding-left: 2rem; padding-right: 2rem;">
                         <i class="fab fa-twitter"></i> Twitter
                     </button>
                     <button class="btn btn-danger"
-                    style="border-radius: 15px; padding-left: 5rem; padding-right: 5rem;"> >
+                    style="border-radius: 15px; padding-left: 1.5rem; padding-right: 1.5rem;">
                         <i class="fab fa-instagram"></i> Instagram
                     </button>
                 </div>
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="button" class="btn btn-primary btn-lg" style="padding-left: 18rem; padding-right: 18rem; border-radius: 40px;">Login</button>
+                        <button type="button" class="btn btn-primary btn-lg" style="border-radius: 40px;">Login</button>
                     </div>
                 </form>
             </div>
