--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Document</title>
     
 </head>
@@ -48,7 +49,7 @@
                     </div>
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0"></p>
+                        <p class="text-center fw-bold mx-3 mb-0">Or</p>
                     </div>
 
                     <!-- Email input -->
@@ -73,7 +74,7 @@
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="button" class="btn btn-primary btn-lg" style="border-radius: 40px;">Login</button>
+                        <button type="button" class="btn btn-primary btn-lg" style="border-radius: 40px;"  id="login" onclick="validateEmail()">Login</button>
                     </div>
                 </form>
             </div>
